[package]
name = "k8s-psl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env"] }
kube = "2.0.1"
tokio = { version = "1.48.0", features = ["macros", "process", "rt", "tokio-macros", "tracing"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt"] }
