[package]
name = "k8s-psl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env"] }
k8s-openapi = { version = "0.26.0", features = ["latest"] }
kube = "2.0.1"
regex = "1.12.2"
tokio = { version = "1.48.0", features = ["macros", "process", "rt", "tokio-macros", "tracing"] }
